Basic version for RobotemRovne 2016

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     
     <string name="app_name">RoboNav</string>
-    <string name="app_version">1.9.1</string>
-    <string name="app_date">- 06.12.2015 (mpt)</string>
+    <string name="app_version">1.9.2</string>
+    <string name="app_date">- 5.5.2016 (RRv1.0)</string>
     
 	<string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
 	<string name="alert_dialog_yes">Yes</string>
@@ -117,6 +117,10 @@
     <string name="title_voice_output_preference">Voice output</string>
     <string name="summary_voice_output_preference">Enable or disable voice output</string>
     <string name="dialog_title_voice_output_preference">Voice output</string>
+    
+    <string name="title_commands_preference">Commands for lrswfbhkpt</string>
+    <string name="summary_commands_preference">Commands translate table</string>
+    <string name="dialog_title_commands_preference">Voice output</string>
     
     <string name="ambot">AmBot</string>
     <string name="pymasde_es">http://pymasde.es/</string>
