--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
     
     <string name="app_name">RoboNav</string>
     <string name="app_version">1.9.6</string>
-    <string name="app_date">- 31.5.2017 (ro2017a)</string>
+    <string name="app_date">- 7.6.2017 (ro2017e)</string>
     
 	<string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
 	<string name="alert_dialog_yes">Yes</string>
