--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     
     <string name="app_name">RoboNav</string>
-    <string name="app_version">1.9.6</string>
-    <string name="app_date">- 20.6.2017 (ro2017gS)</string>
+    <string name="app_version">1.9.7</string>
+    <string name="app_date">- 26.11.2017 (rtMarathon)</string>
     
 	<string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
 	<string name="alert_dialog_yes">Yes</string>
