--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
     
     <string name="app_name">RoboNav</string>
     <string name="app_version">1.9.7</string>
-    <string name="app_date">- 26.11.2017 (rtMarathon)</string>
+    <string name="app_date">- 1.12.2017 (rtMarathon01)</string>
     
 	<string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
 	<string name="alert_dialog_yes">Yes</string>
