--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     
     <string name="app_name">RoboNav</string>
-    <string name="app_version">1.9.8</string>
-    <string name="app_date">- 1.1.2018 (includeJar)</string>
+    <string name="app_version">1.9.9</string>
+    <string name="app_date">- 2.1.2018 (OpenCV3/icon)</string>
     
 	<string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
 	<string name="alert_dialog_yes">Yes</string>
