--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
     
     <string name="app_name">RoboNav</string>
     <string name="app_version">1.9.9</string>
-    <string name="app_date">- 4.1.2018 (OpenCV3)</string>
+    <string name="app_date">- 5.1.2018 (logCV_VER)</string>
     
 	<string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
 	<string name="alert_dialog_yes">Yes</string>
