--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     
     <string name="app_name">RoboNav</string>
-    <string name="app_version">2.0.1</string>
-    <string name="app_date">- 13.6.2018 (coneNav)</string>
+    <string name="app_version">2.0.2</string>
+    <string name="app_date">- 12.7.2018 (QR Droid 2)</string>
     
 	<string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
 	<string name="alert_dialog_yes">Yes</string>
